--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-aiohttp==3.5.4
+aiohttp==3.6.2
 async-timeout==3.0.1
 attrs==19.3.0
 autopep8==1.4.4
 chardet==3.0.4
-discord.py==1.2.5
+discord==1.0.1
+discord.py==1.3.2
 entrypoints==0.3
 flake8==3.7.9
 idna==2.8
